--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,28 @@ div {
   padding: .5rem;
   text-align: center;
 }
+.btn {
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  border-width: 3px;
+  border-color: #000;
+  border-style: solid;
+  font-size: 1.125rem;
+}
+.btn-small {
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  border-width: 3px;
+  border-color: #000;
+  border-style: solid;
+  font-size: .875rem;
+}
+
+.btn-big {
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  border-width: 3px;
+  border-color: #000;
+  border-style: solid;
+  font-size: 1.5rem;
+}
