Add semicolon to text decoration

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ div {
   border-style: solid;
   display: inline-block;
   font-weight: bold;
-  text-decoration: none
+  text-decoration: none;
   font-size: 1.125rem;
 }
 
